// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@render should render as expected if authorized 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    authorized={true}
    history={
        Object {
            "push": [Function],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <p
          className="app-title"
>
          Nexus
</p>,
        <span>
          odd jobs platform
</span>,
        <Menu
          inverted={true}
>
          <MenuItem
                    active={true}
                    name="home"
                    onClick={[Function]}
          />
          <MenuItem
                    active={false}
                    name="contact"
                    onClick={[Function]}
          />
          <MenuMenu
                    position="right"
          >
                    <MenuItem
                              active={false}
                              name="my account"
                              onClick={[Function]}
                    />
                    <MenuItem
                              active={false}
                              icon="sign-out alternate"
                              name="logout"
                              onClick={[Function]}
                    />
          </MenuMenu>
</Menu>,
      ],
      "className": "app-header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Nexus",
          "className": "app-title",
        },
        "ref": null,
        "rendered": "Nexus",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "odd jobs platform",
        },
        "ref": null,
        "rendered": "odd jobs platform",
        "type": "span",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <MenuItem
              active={true}
              name="home"
              onClick={[Function]}
/>,
            <MenuItem
              active={false}
              name="contact"
              onClick={[Function]}
/>,
            false,
            <MenuMenu
              position="right"
>
              <MenuItem
                            active={false}
                            name="my account"
                            onClick={[Function]}
              />
              <MenuItem
                            active={false}
                            icon="sign-out alternate"
                            name="logout"
                            onClick={[Function]}
              />
</MenuMenu>,
          ],
          "inverted": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": true,
              "name": "home",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": false,
              "name": "contact",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <MenuItem
                  active={false}
                  name="my account"
                  onClick={[Function]}
/>,
                <MenuItem
                  active={false}
                  icon="sign-out alternate"
                  name="logout"
                  onClick={[Function]}
/>,
              ],
              "position": "right",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "active": false,
                  "name": "my account",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "active": false,
                  "icon": "sign-out alternate",
                  "name": "logout",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <p
            className="app-title"
>
            Nexus
</p>,
          <span>
            odd jobs platform
</span>,
          <Menu
            inverted={true}
>
            <MenuItem
                        active={true}
                        name="home"
                        onClick={[Function]}
            />
            <MenuItem
                        active={false}
                        name="contact"
                        onClick={[Function]}
            />
            <MenuMenu
                        position="right"
            >
                        <MenuItem
                                    active={false}
                                    name="my account"
                                    onClick={[Function]}
                        />
                        <MenuItem
                                    active={false}
                                    icon="sign-out alternate"
                                    name="logout"
                                    onClick={[Function]}
                        />
            </MenuMenu>
</Menu>,
        ],
        "className": "app-header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Nexus",
            "className": "app-title",
          },
          "ref": null,
          "rendered": "Nexus",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "odd jobs platform",
          },
          "ref": null,
          "rendered": "odd jobs platform",
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <MenuItem
                active={true}
                name="home"
                onClick={[Function]}
/>,
              <MenuItem
                active={false}
                name="contact"
                onClick={[Function]}
/>,
              false,
              <MenuMenu
                position="right"
>
                <MenuItem
                                active={false}
                                name="my account"
                                onClick={[Function]}
                />
                <MenuItem
                                active={false}
                                icon="sign-out alternate"
                                name="logout"
                                onClick={[Function]}
                />
</MenuMenu>,
            ],
            "inverted": true,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": true,
                "name": "home",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": false,
                "name": "contact",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <MenuItem
                    active={false}
                    name="my account"
                    onClick={[Function]}
/>,
                  <MenuItem
                    active={false}
                    icon="sign-out alternate"
                    name="logout"
                    onClick={[Function]}
/>,
                ],
                "position": "right",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "active": false,
                    "name": "my account",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "active": false,
                    "icon": "sign-out alternate",
                    "name": "logout",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`@render should render as expected if not authorized 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    authorized={false}
    history={
        Object {
            "push": [Function],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <p
          className="app-title"
>
          Nexus
</p>,
        <span>
          odd jobs platform
</span>,
        <Menu
          inverted={true}
>
          <MenuItem
                    active={true}
                    name="home"
                    onClick={[Function]}
          />
          <MenuItem
                    active={false}
                    name="contact"
                    onClick={[Function]}
          />
          <MenuMenu
                    position="right"
          >
                    <MenuItem
                              active={false}
                              icon="user"
                              name="register"
                              onClick={[Function]}
                    />
                    <MenuItem
                              active={false}
                              icon="sign-in alternate"
                              name="login"
                              onClick={[Function]}
                    />
          </MenuMenu>
</Menu>,
      ],
      "className": "app-header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Nexus",
          "className": "app-title",
        },
        "ref": null,
        "rendered": "Nexus",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "odd jobs platform",
        },
        "ref": null,
        "rendered": "odd jobs platform",
        "type": "span",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <MenuItem
              active={true}
              name="home"
              onClick={[Function]}
/>,
            <MenuItem
              active={false}
              name="contact"
              onClick={[Function]}
/>,
            <MenuMenu
              position="right"
>
              <MenuItem
                            active={false}
                            icon="user"
                            name="register"
                            onClick={[Function]}
              />
              <MenuItem
                            active={false}
                            icon="sign-in alternate"
                            name="login"
                            onClick={[Function]}
              />
</MenuMenu>,
            false,
          ],
          "inverted": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": true,
              "name": "home",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "active": false,
              "name": "contact",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <MenuItem
                  active={false}
                  icon="user"
                  name="register"
                  onClick={[Function]}
/>,
                <MenuItem
                  active={false}
                  icon="sign-in alternate"
                  name="login"
                  onClick={[Function]}
/>,
              ],
              "position": "right",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "active": false,
                  "icon": "user",
                  "name": "register",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "active": false,
                  "icon": "sign-in alternate",
                  "name": "login",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          false,
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <p
            className="app-title"
>
            Nexus
</p>,
          <span>
            odd jobs platform
</span>,
          <Menu
            inverted={true}
>
            <MenuItem
                        active={true}
                        name="home"
                        onClick={[Function]}
            />
            <MenuItem
                        active={false}
                        name="contact"
                        onClick={[Function]}
            />
            <MenuMenu
                        position="right"
            >
                        <MenuItem
                                    active={false}
                                    icon="user"
                                    name="register"
                                    onClick={[Function]}
                        />
                        <MenuItem
                                    active={false}
                                    icon="sign-in alternate"
                                    name="login"
                                    onClick={[Function]}
                        />
            </MenuMenu>
</Menu>,
        ],
        "className": "app-header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Nexus",
            "className": "app-title",
          },
          "ref": null,
          "rendered": "Nexus",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "odd jobs platform",
          },
          "ref": null,
          "rendered": "odd jobs platform",
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <MenuItem
                active={true}
                name="home"
                onClick={[Function]}
/>,
              <MenuItem
                active={false}
                name="contact"
                onClick={[Function]}
/>,
              <MenuMenu
                position="right"
>
                <MenuItem
                                active={false}
                                icon="user"
                                name="register"
                                onClick={[Function]}
                />
                <MenuItem
                                active={false}
                                icon="sign-in alternate"
                                name="login"
                                onClick={[Function]}
                />
</MenuMenu>,
              false,
            ],
            "inverted": true,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": true,
                "name": "home",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": false,
                "name": "contact",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <MenuItem
                    active={false}
                    icon="user"
                    name="register"
                    onClick={[Function]}
/>,
                  <MenuItem
                    active={false}
                    icon="sign-in alternate"
                    name="login"
                    onClick={[Function]}
/>,
                ],
                "position": "right",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "active": false,
                    "icon": "user",
                    "name": "register",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "active": false,
                    "icon": "sign-in alternate",
                    "name": "login",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            false,
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
